--- a/src/css/utilities/_tables.scss
+++ b/src/css/utilities/_tables.scss
@@ -5,12 +5,13 @@
     border-collapse: collapse;
     border-spacing: 1rem 0;
     .btn-selection {
+        display: flex;
+        justify-content: center;
         background: map-get($colors, darkRed);
         color: white;
-        padding: 2rem;
-        min-width: 10rem;
+        padding: 4rem;
         max-width: 10rem;
-        text-align: center;
+        margin-bottom: 1rem;
         box-shadow: 0 1px 0 rgba(0,0,0,0.45);
         border-radius: 10px;
         outline: none;
@@ -25,7 +26,8 @@
     }
     thead tr th {
         text-transform: uppercase;
-        padding: 4rem;
+        letter-spacing: 0.3ch;
+        padding: 0 .5rem;
     }
     td {
         padding: 0.8rem 1.2rem;
